--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,93 +57,48 @@
         <!--android:configChanges="orientation|keyboardHidden"></activity>-->
 
 
-        <activity android:name="com.cmcc.migusso.sdk.activity.LoginActivity"
+        <activity android:name="com.cmcc.migusso.sdk.ui.LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"></activity>
 
-        <activity android:name="com.cmcc.migusso.sdk.activity.SmsLoginActivity"
+        <activity android:name="com.cmcc.migusso.sdk.ui.SmsLoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"></activity>
 
-        <activity android:name="com.cmcc.migusso.sdk.activity.RegisterActivity"
+        <activity android:name="com.cmcc.migusso.sdk.ui.RegisterActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"></activity>
 
-        <activity android:name="com.cmcc.migusso.sdk.activity.FindPasswordActivity"
+        <activity android:name="com.cmcc.migusso.sdk.ui.FindPasswordActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"></activity>
 
-        <activity android:name="com.cmcc.migusso.sdk.activity.UserProtocolActivity"
+        <activity android:name="com.cmcc.migusso.sdk.ui.UserProtocolActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"></activity>
 
-        <activity android:name="com.cmcc.migusso.sdk.activity.UpgradeUserActivity"
+        <activity android:name="com.cmcc.migusso.sdk.ui.UpgradeUserActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"></activity>
-
-
-        <!-- 下面是 2.1 期新加内容-->
-        <activity android:name="com.cmcc.migusso.sdk.activity.UserManageActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"></activity>
-
-        <activity android:name="com.cmcc.migusso.sdk.activity.ChangeNickNameActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"></activity>
-
-        <activity android:name="com.cmcc.migusso.sdk.activity.BindPhoneNumActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"></activity>
-
-        <activity android:name="com.cmcc.migusso.sdk.activity.ChangePasswordActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"></activity>
-
-        <activity android:name="com.cmcc.migusso.sdk.activity.SetPasswordActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"></activity>
-
-        <activity android:name="com.cmcc.migusso.sdk.activity.VerifyOldPhoneActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"></activity>
-
-        <activity android:name="com.cmcc.migusso.sdk.activity.BindNewPhoneActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"></activity>
-
 
 
         <!--集成开始 -->
 
         <service
             android:name="com.cmcc.migusso.service.SsoService"
-            android:exported="true"
             android:process="com.cmcc.migusso.service.SsoService" >
-            <intent-filter>
-                <action android:name="com.cmcc.migusso.Action.SsoService" />
+            <!--<intent-filter>-->
+                <!--<action android:name="com.cmcc.migusso.Action.SsoService" />-->
 
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+            <!--</intent-filter>-->
 
-            <meta-data
-                android:name="service_version"
-                android:value="2.1.0-jar.arm" />
+            <!--<meta-data-->
+                <!--android:name="service_version"-->
+                <!--android:value="2.1.0-jar.arm" />-->
         </service>
 
-        <receiver android:name="com.cmcc.migusso.receiver.BootReceiver" >
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
 
-                <category android:name="android.intent.category.HOME" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED" />
-                <action android:name="android.intent.action.PACKAGE_REMOVED" />
-                <action android:name="android.intent.action.PACKAGE_REPLACED" />
-
-                <data android:scheme="package" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
